Add linear sensor data fields

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,13 @@
     <string name="tab_text_1">Local metrics</string>
     <string name="tab_text_2">Cloud metrics</string>
     <string name="tab_text_3">Cloud alerts</string>
-    <string name="TEST_local_data_fragment">Local data fragment</string>
-    <string name="TEST_cloud_data_fragment">Cloud data fragment</string>
-    <string name="TEST_notifications_fragment">Notifications fragment</string>
+    <string name="local_data_fragment_title">Local data fragment</string>
+    <string name="cloud_data_fragment_title">Cloud data fragment</string>
+    <string name="notifications_fragment_title">Notifications fragment</string>
+    <string name="ambient_temperature_label">Ambient temperature (°C)</string>
+    <string name="magnetic_field_label">Magnetic field (NE-Up μT)</string>
+    <string name="proximity_label">Proximity (cm)</string>
+    <string name="light_label">Light (lux)</string>
+    <string name="pressure_label">Pressure (hPa)</string>
+    <string name="relative_humidity">Relative humidity (%)</string>
 </resources>
