Fix missing sensors and limit data rate

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,9 @@
     <string name="local_data_fragment_title">Local data fragment</string>
     <string name="cloud_data_fragment_title">Cloud data fragment</string>
     <string name="notifications_fragment_title">Notifications fragment</string>
-    <string name="ambient_temperature_label">Ambient temperature (°C)</string>
-    <string name="proximity_label">Proximity (cm)</string>
-    <string name="light_label">Light (lux)</string>
-    <string name="pressure_label">Pressure (hPa)</string>
-    <string name="relative_humidity">Relative humidity (%)</string>
+    <string name="gyro_label">Gyroscope</string>
+    <string name="accel_label">Accelerometer</string>
+    <string name="magnetic_label">Magnetic Field</string>
+    <string name="proximity_label">Proximity</string>
     <string name="sensor_not_available">Sensor not available</string>
 </resources>
